--- a/src/Components/FeaturedStyles.css
+++ b/src/Components/FeaturedStyles.css
@@ -1,9 +1,10 @@
 .featured-container {
   display: flex;
-  max-width: 1440px;
+  max-width: 1120px;
   width: 100%;
   padding-top: 80px;
   padding-left: 160px;
+  padding-right: 160px;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 80px;
